// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components : Layout : Header renders correctly 1`] = `
<header
  className="site-header siteHeader  "
>
  <div
    className="container showBackground"
  >
    <div
      className="container false container"
    >
      <div
        className="layout--content-full"
      >
        <div
          className="layout--content-primary"
        >
          <div
            className="siteTitleContainer"
          >
            <div
              className="siteTitleInner"
            >
              <a
                className="siteTitle"
                href="/"
              >
                <img
                  alt="The COVID Tracking Project"
                  src="test-file-stub"
                  width="176px"
                />
              </a>
            </div>
            <div
              className="navContainer"
            >
              <button
                aria-expanded={false}
                className="mobileToggle"
                onClick={[Function]}
                type="button"
              >
                Menu
              </button>
            </div>
            <nav
              className="js-disabled-block"
            >
              <ul>
                <li>
                  <a
                    href="/test-a"
                  >
                    Test A
                  </a>
                </li>
                <li>
                  <a
                    href="/test-b"
                  >
                    Test B
                  </a>
                </li>
              </ul>
            </nav>
          </div>
          <div
            className="titleSubnavContainer"
          >
            <div
              className="title"
            >
              <h1
                className="page-title pageTitle extraSpace"
              >
                Sample title
              </h1>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</header>
`;

exports[`Components : Layout : Header renders correctly 2`] = `
<div
  className="circles"
>
  <header
    className="site-header siteHeader  noMargin"
  >
    <div
      className="container false"
    >
      <div
        className="container false container"
      >
        <div
          className="layout--content-full"
        >
          <div
            className="layout--content-primary"
          >
            <div
              className="siteTitleContainer"
            >
              <div
                className="siteTitleInner"
              >
                <a
                  className="siteTitle"
                  href="/"
                >
                  <img
                    alt="The COVID Tracking Project"
                    src="test-file-stub"
                    width="176px"
                  />
                </a>
              </div>
              <div
                className="navContainer"
              >
                <button
                  aria-expanded={false}
                  className="mobileToggle"
                  onClick={[Function]}
                  type="button"
                >
                  Menu
                </button>
              </div>
              <nav
                className="js-disabled-block"
              >
                <ul>
                  <li>
                    <a
                      href="/test-a"
                    >
                      Test A
                    </a>
                  </li>
                  <li>
                    <a
                      href="/test-b"
                    >
                      Test B
                    </a>
                  </li>
                </ul>
              </nav>
            </div>
            <div
              className="titleSubnavContainer"
            >
              <div
                className="title"
              >
                <h1
                  className="page-title pageTitle extraSpace"
                >
                  Sample title
                </h1>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </header>
   
  <div
    className="container false container"
  >
    <div
      className="layout--content-full"
    >
      <div
        className="layout--content-primary"
      >
        <div
          className="hero hero"
        >
          <p
            className="header"
          >
            The COVID Tracking Project collects and publishes the most complete testing data available for US states and territories.
          </p>
          <div
            className="ctas"
          >
            <a
              className="button"
              href="/data"
            >
              Get the Data
            </a>
            <span>
              or
            </span>
            <a
              href="/about-data"
            >
              Learn About the Data
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Components : Layout : Header renders correctly 3`] = `
<header
  className="site-header siteHeader  "
>
  <div
    className="container showBackground"
  >
    <div
      className="container false container"
    >
      <div
        className="layout--content-full"
      >
        <div
          className="layout--content-primary"
        >
          <div
            className="siteTitleContainer"
          >
            <div
              className="siteTitleInner"
            >
              <a
                className="siteTitle"
                href="/"
              >
                <img
                  alt="The COVID Tracking Project"
                  src="test-file-stub"
                  width="176px"
                />
              </a>
            </div>
            <div
              className="navContainer"
            >
              <button
                aria-expanded={false}
                className="mobileToggle"
                onClick={[Function]}
                type="button"
              >
                Menu
              </button>
            </div>
            <nav
              className="js-disabled-block"
            >
              <ul>
                <li>
                  <a
                    href="/test-a"
                  >
                    Test A
                  </a>
                </li>
                <li>
                  <a
                    href="/test-b"
                  >
                    Test B
                  </a>
                </li>
              </ul>
            </nav>
          </div>
          <div
            className="titleSubnavContainer"
          >
            <div
              className="title"
            >
              <h1
                className="page-title pageTitle extraSpace"
              >
                <a
                  href="/link"
                >
                  Sample title
                </a>
              </h1>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</header>
`;
